refactor(file): make bridge own FILE watcher runtime and delivery
Align FILE ownership with 014 remediation by enabling runtime watch registration, wiring registration API updates into live watcher state, and forwarding FILE payloads directly to OE import endpoint.

Made-with: Cursor