@@ -1,148 +1,146 @@
 package org.itech.ahb.file;
 
+import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Base64;
 import lombok.extern.slf4j.Slf4j;
 import org.itech.ahb.model.Protocol;
 import org.itech.ahb.model.Transport;
 import org.itech.ahb.normalizer.MessageEnvelope;
-import org.itech.ahb.normalizer.MessageNormalizer;
-import org.itech.ahb.util.ProtocolDetector;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
-
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
 
 /**
  * Handles file-based analyzer messages.
- * <p>
- * Reads file content, detects protocol format, and delegates to
- * {@link MessageNormalizer} for routing to OpenELIS.
- * </p>
- * <p>
- * Part of M7: Message Normalizer milestone — all transport handlers delegate to
- * the normalizer for unified routing logic, retry/backoff, and audit logging.
- * </p>
  *
- * @see MessageNormalizer
- * @see MessageEnvelope
+ * For FILE transport, the bridge sends files directly to OpenELIS direct-import
+ * endpoint (`/rest/analyzers/{id}/import`) instead of routing through the
+ * message normalizer and legacy `/analyzer/csv` path.
  */
 @Component
-@ConditionalOnProperty(prefix = "bridge.file", name = "enabled", havingValue = "true")
 @Slf4j
 public class FileMessageHandler {
 
     private final CSVParser csvParser;
-    private final MessageNormalizer normalizer;
-    private final FileConfig fileConfig;
+    private final HttpClient httpClient = HttpClient.newHttpClient();
 
-    // Maximum file size to process (10MB default)
+    @Value("${bridge.openelis.url:http://localhost:8443}")
+    private String openelisBaseUrl;
+
+    @Value("${bridge.openelis.username:}")
+    private String openelisUsername;
+
+    @Value("${bridge.openelis.password:}")
+    private String openelisPassword;
+
     private static final long MAX_FILE_SIZE_BYTES = 10 * 1024 * 1024;
 
-    /**
-     * Creates a new FileMessageHandler.
-     *
-     * @param csvParser the CSV parser for validation
-     * @param fileConfig the file watcher configuration
-     * @param normalizer the message normalizer for routing
-     */
-    public FileMessageHandler(
-            CSVParser csvParser,
-            FileConfig fileConfig,
-            MessageNormalizer normalizer) {
+    public FileMessageHandler(CSVParser csvParser) {
         this.csvParser = csvParser;
-        this.fileConfig = fileConfig;
-        this.normalizer = normalizer;
     }
 
-    /**
-     * Process a file and forward to OpenELIS via MessageNormalizer.
-     * <p>
-     * Reads the file, detects protocol, validates content, creates a MessageEnvelope,
-     * and delegates to the {@link MessageNormalizer} for routing to OpenELIS.
-     * </p>
-     *
-     * @param filePath   the file path to process
-     * @param analyzerId optional analyzer identifier (for CSV mapping lookup)
-     * @return MessageEnvelope with processing metadata
-     * @throws IOException              if file reading fails
-     * @throws FileProcessingException if protocol detection or forwarding fails
-     */
-    public MessageEnvelope processFile(Path filePath, String analyzerId) throws IOException, FileProcessingException {
-        log.info("Processing file: {} for analyzer: {}", filePath, analyzerId);
+    public FileMessageHandler(CSVParser csvParser, FileConfig ignoredFileConfig,
+            org.itech.ahb.normalizer.MessageNormalizer ignoredNormalizer) {
+        this.csvParser = csvParser;
+    }
 
-        // Check file size before reading
+    public MessageEnvelope processFile(Path filePath, String analyzerId) throws IOException, FileProcessingException {
+        if (analyzerId == null || analyzerId.isBlank()) {
+            throw new FileProcessingException("analyzerId is required for FILE delivery: " + filePath);
+        }
+
         long fileSize = Files.size(filePath);
         if (fileSize > MAX_FILE_SIZE_BYTES) {
-            log.warn("File size ({} bytes) exceeds maximum ({}), processing anyway with caution",
-                    fileSize, MAX_FILE_SIZE_BYTES);
+            log.warn("File size ({} bytes) exceeds max ({}), processing with caution", fileSize, MAX_FILE_SIZE_BYTES);
         }
         if (fileSize == 0) {
             throw new FileProcessingException("File is empty: " + filePath);
         }
 
-        // Read file content
-        String content = Files.readString(filePath);
-        if (content == null || content.trim().isEmpty()) {
+        byte[] content = Files.readAllBytes(filePath);
+        if (content.length == 0) {
             throw new FileProcessingException("File is empty: " + filePath);
         }
 
-        // Detect protocol
-        Protocol protocol = ProtocolDetector.detect(content);
-        log.debug("Detected protocol: {} for file: {}", protocol, filePath.getFileName());
+        postFileToOpenElis(filePath, analyzerId, content);
 
-        if (protocol == Protocol.UNKNOWN) {
-            log.warn("Unable to detect protocol for file {}, routing as raw", filePath.getFileName());
-        } else if (!validateFileContent(filePath, protocol)) {
-            throw new FileProcessingException("Invalid " + protocol + " content in file: " + filePath);
-        }
-
-        // Create envelope
-        MessageEnvelope envelope = MessageEnvelope.builder()
-                .protocol(protocol)
+        return MessageEnvelope.builder()
+                .protocol(Protocol.CSV)
                 .transport(Transport.FILE)
                 .sourceId(filePath.toString())
-                .rawMessage(content)
+                .rawMessage(filePath.getFileName().toString())
                 .analyzerId(analyzerId)
                 .build();
-
-        // Delegate to normalizer for routing
-        boolean success = normalizer.process(envelope);
-        if (!success) {
-            throw new FileProcessingException("Failed to route message for file: " + filePath);
-        }
-
-        return envelope;
     }
 
-    /**
-     * Validate file content before processing.
-     *
-     * @param filePath the file to validate
-     * @param protocol the detected protocol
-     * @return true if file content appears valid for the protocol
-     * @throws IOException if file reading fails
-     */
-    public boolean validateFileContent(Path filePath, Protocol protocol) throws IOException {
-        String content = Files.readString(filePath);
+    private void postFileToOpenElis(Path filePath, String analyzerId, byte[] content)
+            throws IOException, FileProcessingException {
+        String boundary = "----OpenElisBridgeBoundary" + System.currentTimeMillis();
+        String filename = filePath.getFileName().toString();
 
-        if (content == null || content.trim().isEmpty()) {
-            log.warn("File is empty: {}", filePath);
-            return false;
+        byte[] preamble = (
+                "--" + boundary + "\r\n" +
+                "Content-Disposition: form-data; name=\"file\"; filename=\"" + filename + "\"\r\n" +
+                "Content-Type: application/octet-stream\r\n\r\n"
+        ).getBytes(StandardCharsets.UTF_8);
+
+        byte[] closing = ("\r\n--" + boundary + "--\r\n").getBytes(StandardCharsets.UTF_8);
+
+        byte[] body = new byte[preamble.length + content.length + closing.length];
+        System.arraycopy(preamble, 0, body, 0, preamble.length);
+        System.arraycopy(content, 0, body, preamble.length, content.length);
+        System.arraycopy(closing, 0, body, preamble.length + content.length, closing.length);
+
+        String base = openelisBaseUrl.endsWith("/") ? openelisBaseUrl.substring(0, openelisBaseUrl.length() - 1)
+                : openelisBaseUrl;
+        URI uri = URI.create(base + "/rest/analyzers/" + analyzerId + "/import");
+
+        HttpRequest.Builder requestBuilder = HttpRequest.newBuilder(uri)
+                .header("Content-Type", "multipart/form-data; boundary=" + boundary)
+                .header("X-Analyzer-Id", analyzerId)
+                .POST(HttpRequest.BodyPublishers.ofByteArray(body));
+
+        if (openelisUsername != null && !openelisUsername.isBlank()) {
+            String token = Base64.getEncoder()
+                    .encodeToString((openelisUsername + ":" + (openelisPassword == null ? "" : openelisPassword))
+                            .getBytes(StandardCharsets.UTF_8));
+            requestBuilder.header("Authorization", "Basic " + token);
         }
 
-        // CSV-specific validation
+        HttpResponse<String> response;
+        try {
+            response = httpClient.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new FileProcessingException("Interrupted while forwarding file to OpenELIS", e);
+        }
+
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new FileProcessingException(
+                    "OpenELIS direct import failed for analyzer " + analyzerId +
+                            " with status " + response.statusCode() + ": " + response.body());
+        }
+
+        log.info("Forwarded file {} to OpenELIS direct-import endpoint for analyzer {}", filename, analyzerId);
+    }
+
+    public boolean validateFileContent(Path filePath, Protocol protocol) throws IOException {
+        String content = Files.readString(filePath);
+        if (content == null || content.trim().isEmpty()) {
+            return false;
+        }
         if (protocol == Protocol.CSV) {
             return csvParser.isValidCSV(content);
         }
-
-        // Basic validation for ASTM/HL7 (has minimum structure)
-        return content.length() > 10 && !content.isBlank();
+        return true;
     }
 
-    /**
-     * Custom exception for file processing errors.
-     */
     public static class FileProcessingException extends Exception {
         public FileProcessingException(String message) {
             super(message);
